2019-04-29 Mao Han <han_mao@c-sky.com>

	* eblopenbackend.c: Add C-SKY.

2019-06-28  Mark Wielaard  <mark@klomp.org>

	* eblopenbackend.c (try_dlopen): Remove result->name check.
	(openbackend): Remove result->name assignment.
	(struct ebl): Remove name.

2019-05-30  Mark Wielaard  <mark@klomp.org>

	* eblopenbackend.c (try_dlopen): New function extracted from
	openbackend.
	(openbackend): Replace ORIGINDIR define with BINORIGINDIR and
	LIBORIGINDIR defines. Use tryopen to open backend in bin origin
	path, lib origin path and without an explicit path.

2019-04-28  Mark Wielaard  <mark@klomp.org>

	* eblsymbolbindingname.c (ebl_symbol_binding_name): Check ebl is
	not NULL for STB_GNU_UNIQUE.
	* eblsymboltypename.c (ebl_symbol_type_name): Check ebl is not
	NULL for STT_GNU_IFUNC.

2019-01-29  Mark Wielaard  <mark@klomp.org>

	* eblobjnote.c (ebl_object_note): Check pr_datasz padding doesn't
	overflow descsz.

2019-01-16  Mark Wielaard  <mark@klomp.org>

	* libebl.h (ebl_core_note): Add desc as argument.
	* eblcorenote.c (ebl_core_note): Take desc as an argument, check
	it contains a zero terminated string if it is an NT_PLATFORM note.

2019-01-16  Mark Wielaard  <mark@klomp.org>

	* eblobjnte.c (ebl_object_note): Check pr_datasz isn't too large.

2018-12-02  Mark Wielaard  <mark@klomp.org>

	* eblobjnte.c (ebl_object_note): For GNU_PROPERTY_STACK_SIZE use
	an Elf32_Addr or Elf64_Addr to read and print the size.

2018-11-15  Mark Wielaard  <mark@klomp.org>

	* eblobjnotetypename.c (ebl_object_note_type_name): Don't update
	w, t and len unnecessarily.

2018-11-12  Mark Wielaard  <mark@klomp.org>

	* libebl.h (ebl_object_note): Add new argument namesz.
	* eblobjnote.c (ebl_object_note): Likewise and handle GNU Build
	Attribute notes.
	* eblobjnotetypename.c (ebl_object_note_type_name): Handle GNU
	Build Attribute notes.

2018-11-11  Mark Wielaard  <mark@klomp.org>

	* eblobjnote.c (ebl_object_note): Recognize NT_VERSION with zero