@@ -1,3 +1,7 @@
+2019-07-05  Omar Sandoval  <osandov@fb.com>
+
+	* Makefile.am (gen_SOURCES): Remove.
+
 2019-04-29 Mao Han <han_mao@c-sky.com>
 
 	* eblopenbackend.c: Add C-SKY.
